Fixed issue with Jquery link being in the wrong position. Buttons are now being displayed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,32 @@
-body {
-    color: red;
-}
+body{
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    background-color: hotpink;
+  
+  }
+  
+  .gifGoesHere {
+    display: inline-block;
+    padding: 10px;
+  }
+  
+  .button {
+    padding: 5px;
+    margin: 5px;
+    box-shadow: 3px;
+  }
+  
+  form {
+    padding: 5px;
+    margin: 5px;
+  }
+  
+  .gif-name {
+    margin: 5px;
+    padding: 10px;
+  }
+  
+  .add-gif {
+   margin: 5px;
+  }
